Fix for wf guide css margin style.

--- a/ckanext/tess/templates/workflow/snippets/workflow-helper.html
+++ b/ckanext/tess/templates/workflow/snippets/workflow-helper.html
@@ -5,7 +5,8 @@
     </h2>
 
     <div id="instructions" style="padding: 0 5px;" class="module-content col-md-4">
-        <ul>    <div class="panel-heading" role="tab" id="heading-adding-nodes-links">
+        <ul style="margin: 0px 0px 10px 10px;">
+            <div class="panel-heading" role="tab" id="heading-adding-nodes-links">
             <h4 class="panel-title"><a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse-adding-nodes-links" aria-expanded="false"
                                        aria-controls="collapse-adding-nodes-links">Adding nodes and links</a></h4>
         </div>
@@ -22,7 +23,7 @@
             </ul>
         </div>
         <hr style="margin:0px 0px;">
-        <ul>
+        <ul style="margin: 0px 0px 10px 10px;">
             <div class="panel-heading" role="tab" id="heading-deleting-nodes-links">
                 <h4 class="panel-title"><a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse-deleting-nodes-links" aria-expanded="false"
                                            aria-controls="collapse-deleting-nodes-links">Deleting nodes and links</a></h4>
@@ -35,7 +36,7 @@
             </ul>
         </div>
         <hr style="margin:0px 0px;">
-        <ul>
+        <ul style="margin: 0px 0px 10px 10px;">
             <div class="panel-heading" role="tab" id="heading-zoom-pan">
                 <h4 class="panel-title"><a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse-zoom-pan" aria-expanded="false"
                                            aria-controls="collapse-zoom-pan">Zooming and panning</a></h4>
