--- a/ckanext/tess/templates/workflow/snippets/workflow-element-editor.html
+++ b/ckanext/tess/templates/workflow/snippets/workflow-element-editor.html
@@ -1,15 +1,9 @@
 <div class="module module-narrow module-shallow">
     <h2 class="module-heading">
         <i class="icon-edit-sign"></i>
-        {{ _('Selected element') }}
+        {{ _('Workflow property editor') }}
     </h2>
-
     <div style="padding: 0 5px;" class="module-content col-md-4">
-        <div class="workflow_element_info">
-            <ul class="items">
-                <li>Test</li>
-                <li>Test</li>
-            </ul>
-        </div>
+        <div id="workflow_element_info"></div>
     </div>
 </div>
