--- a/ckanext/tess/templates/node/snippets/node_template.html
+++ b/ckanext/tess/templates/node/snippets/node_template.html
@@ -23,17 +23,24 @@
                 {% endif %}
             {% endif %}
         </div>
-        {% if node.member_status != 'Member' %}
-            <h2 style="margin-left:130px">[{{ node.member_status }} Node]</h2>
-        {% endif %}
+
+    {% if node.member_status is defined and node.member_status != 'Member' %}
+    <div style="float: left; width: 30%;">
+        <h2 class="page-heading" style="text-align:center; margin: 0px;">
+            [{{ node.member_status}} node ]
+        </h2>
+    </div>
+    {% endif %}
+
         {% if node.state == 'deleted' %}
-        <div style="float: left; width: 60%;">
-            <h1 class="page-heading" style="text-align:center; margin: 0px;">
+        <div style="float: left; width: 30%;">
+            <h2 class="page-heading" style="text-align:center; margin: 0px;">
                 <!--{{ node.get('display_name') }}-->
                 [{{ _('Deleted') }}]
-            </h1>
+            </h2>
         </div>
         {% endif %}
+
         <div style="float: right; padding: 10px;">
             {% snippet "node/snippets/node_list_dropdown.html" %}
         </div>
