--- a/ckanext/tess/templates/workflow/snippets/workflow-creation-guide.html
+++ b/ckanext/tess/templates/workflow/snippets/workflow-creation-guide.html
@@ -1,7 +1,7 @@
 <div class="module module-narrow module-shallow">
     <h2 class="module-heading">
         <i class="icon-info-sign"></i>
-        {{ _('Creating workflows') }}
+        {{ _('Workflow creation guide') }}
     </h2>
 
     <div id="instructions" style="padding: 0 5px;" class="module-content col-md-4">
