--- a/ckanext/tess/templates/workflow/new.html
+++ b/ckanext/tess/templates/workflow/new.html
@@ -3,33 +3,39 @@
 {% block subtitle %}{{ _('Workflows') }}{% endblock %}
 
 {% block breadcrumb_content %}
-<li class="active">{% link_for _('Workflows'), controller='group', action='index' %}</li>
+<li>{% link_for _('Workflows'), controller='ckanext.tess.workflow:WorkflowController', action='index' %}</li>
+<li class="active">{% link_for 'Create workflow', controller='ckanext.tess.workflow:WorkflowController', action='new' %}</li>
 {% endblock %}
 
 {% block page_header %}{% endblock %}
 
-
 {% block page_primary_action %}
   {% if h.check_access('group_create') %}
-    {% link_for _('Save workflow'), controller='ckanext.tess.node:NodeController', action='new', class_='btn btn-primary', icon='save' %}
+    {% link_for _('Save workflow'), controller='ckanext.tess.workflow:WorkflowController', action='save', class_='btn btn-primary', icon='save' %}
   {% endif %}
 {% endblock %}
 
 {% block primary_content_inner %}
-
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
 <script type="text/javascript" src="http://cytoscape.github.io/cytoscape.js/api/cytoscape.js-latest/cytoscape.js"></script>
 <script type="text/javascript" src="https://rawgit.com/bdparrish/cytoscape.js-toolbar/master/cytoscape-toolbar.js"></script>
 <!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/js/bootstrap.min.js"></script>-->
 <link type="text/css" href="/workflows-cytoscape.css" rel="stylesheet"/>
 <link type="text/css" href="/font-awesome-4.0.3/css/font-awesome.css" rel="stylesheet"/>
+<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 <!--<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">-->
 {% resource 'tess/workflows-cytoscape-toolbar.js' %}
 
-<!--<div>&nbsp;</div>-->
 <div id="cy" style="float: right;" class="cy col-md-7 col-md-offset-1"></div>
+<script>
+    $(document).ready(function(){
+        drawGraph({},'new');
+    });
+</script>
 {% endblock %}
 
 {% block secondary_content %}
-{% snippet "workflow/snippets/workflow-helper.html" %}
+{% snippet "workflow/snippets/workflow-property-editor.html" %}
+{% snippet "workflow/snippets/workflow-creation-guide.html" %}
 {% endblock %}
