--- a/ckanext/tess/templates/event/snippets/events_item.html
+++ b/ckanext/tess/templates/event/snippets/events_item.html
@@ -4,6 +4,11 @@ Related - Whether we want a button to associate this object with something
 #}
 
 {% block item %}
+
+    {% if event.get('link') %}
+      {% set link = event.pop('link') %}
+    {% endif %}
+
     {% block expired %}
         {% if event.get('expired', False) %}
             {# Want 2 in a row? add to class - masonry-brick node-brick #}
@@ -15,8 +20,7 @@ Related - Whether we want a button to associate this object with something
     {% set expired = event.pop('expired', None) %}
 
     {% block heading %}
-        {% if event.get('link') %}
-            {% set link = event.pop('link') %}
+        {% if link %}
             <a href="{{link}}" target="_blank"><h3 class="media-heading">{{event.pop('title') }}</h3></a>
         {% else %}
             <h3 class="media-heading">{{event.pop('title') }}</h3><br>
@@ -50,8 +54,8 @@ Related - Whether we want a button to associate this object with something
         {% endif %}
     {% endblock %}
 
+    {% set id = event.pop('id', 0) %}
     {% block etc %}
-        {% set id = event.pop('id') %}
         {% for k, v in event.iteritems(): %}
             {% if v %}
                 <b>{{k.title()}}</b>: {{v}}<br>
@@ -60,7 +64,14 @@ Related - Whether we want a button to associate this object with something
     {% endblock %}
 
     {% if related %}
-        <br><a class="btn" value="{{related.id}}">Associate with Material</a>
+
+        <br>
+        <button data-module="associate_event"
+                class="btn"
+                href="#"
+                data-module-event_id="{{id}}"
+                data-module-event_url="{{link}}"
+                data-module-resource_id="{{c.pkg_dict.id}}"> Associate with Material</button>
     {% endif %}
 
     {% if expired %}
