--- a/ckanext/tess/templates/workflow/new.html
+++ b/ckanext/tess/templates/workflow/new.html
@@ -11,12 +11,6 @@
 {% block page_header %}{% endblock %}
 
 {% block page_primary_action %}
-  {# if h.check_access('workflow_create') #}
-    <div class="page_primary_action" style="padding-bottom: 30px;">
-    <a class="btn btn-primary" style="float:right;" href="/workflow/save"><i class="icon-save"></i> Save workflow</a>
-     </div>
-    <!--{% link_for _('Save workflow'), controller='ckanext.tess.workflow:WorkflowController', action='save', class_='btn btn-primary', style="float: right;", icon='save' %}-->
-  {# endif #}
 {% endblock %}
 
 {% block primary_content_inner %}
@@ -32,10 +26,20 @@
 {% resource 'tess/workflows-cytoscape-toolbar.js' %}
 
 <form class="workflow-form form-horizontal" method="post" data-module="basic-form" enctype="multipart/form-data">
-  {% block basic_fields %}
+
+    <div class="form-actions" style="border-top: 0px; padding-top: 0px;">
+        {% if h.check_access('workflow_create')  %}
+        {% set workflow_create_url = h.url_for('workflow_create') %}
+        <div style="padding-bottom: 30px;">&nbsp;
+            <a class="btn btn-primary pull-right" href="{{workflow_create_url}}"><i class="icon-save"></i> Save workflow</a>
+        </div>
+        {% endif %}
+    </div>
+
+    {% block basic_fields %}
     {{ form.input('title', label=_('Name'), id='field-name', placeholder=_('Workflow name'), classes=['control-full']) }}
     {{ form.markdown('description', label=_('Description'), id='field-description', placeholder=_('A little information about workflow...'), value=None, error=None) }}
-  {% endblock %}
+    {% endblock %}
 </form>
 
 <div id="cy" style="float: right;" class="cy col-md-7 col-md-offset-1"></div>
