Added a new field to datasets to hold the URL of the dataset - i.e. of the training material.

--- a/ckanext/tess/templates/package/new_package_form.html
+++ b/ckanext/tess/templates/package/new_package_form.html
@@ -10,7 +10,7 @@
 
 {% block save_button_text %}
   {% if form_style != 'edit' %}
-    {{ _('Next: Add resources') }}
+    {{ _('Next: Add additional resources') }}
   {% else %}
     {{ _('Update training material') }}
   {% endif %}
