--- a/ckanext/tess/templates/package/snippets/package_metadata_fields.html
+++ b/ckanext/tess/templates/package/snippets/package_metadata_fields.html
@@ -4,7 +4,9 @@
   {% block package_metadata_author %}
     {{ form.input('author', label=_('Author'), id='field-author', placeholder=_('Joe Bloggs'), value=data.author, error=errors.author, classes=['control-medium']) }}
 
-    {{ form.input('author_email', label=_("Author's email"), id='field-author-email', placeholder=_('joe@example.com'), value=data.author_email, error=errors.author_email, classes=['control-medium']) }}
+    <!--
+    {# form.input('author_email', label=_("Author's email"), id='field-author-email', placeholder=_('joe@example.com'), value=data.author_email, error=errors.author_email, classes=['control-medium']) #}
+    -->
   {% endblock %}
 <!--
   {% block package_metadata_fields_maintainer %}
