--- a/ckanext/tess/templates/package/snippets/resources_list.html
+++ b/ckanext/tess/templates/package/snippets/resources_list.html
@@ -10,7 +10,7 @@ Example:
 
 #}
 <section id="dataset-resources" class="resources">
-  <h3>{{ _('Training material and related resources') }}</h3>
+  <h3>{{ _('Related resources') }}</h3>
   {% block resource_list %}
     {% if resources %}
       <ul class="{% block resource_list_class %}resource-list{% endblock %}">
@@ -23,10 +23,10 @@ Example:
     {% else %}
       {% if h.check_access('resource_create', {'package_id': pkg['id']}) %}
           {% trans url=h.url_for(controller='package', action='new_resource', id=pkg.name) %}
-            <p class="empty">This dataset has no data, <a href="{{ url }}">why not add some?</a></p>
+            <p class="empty">This training material has no additional resources, <a href="{{ url }}">why not add some?</a></p>
           {% endtrans %}
       {% else %}
-          <p class="empty">{{ _('This dataset has no data') }}</p>
+          <p class="empty">{{ _('This training material has no additional resources') }}</p>
       {% endif %}
     {% endif %}
 
