--- a/ckanext/tess/templates/package/related_events.html
+++ b/ckanext/tess/templates/package/related_events.html
@@ -9,17 +9,16 @@
 
 
 {% block primary_content_inner %}
-    {% block suggested_events %}
-
-        {% if c.suggested_events.get('count') > 0 %}
-            <div id='suggested-events' class="suggested-events">
-                <h2>Suggested Events</h2>
-                    {% snippet "event/snippets/events_list.html", events=c.suggested_events.get('events', None), related=True %}
-
-            </div>
+        {% if c.associated_events %}
+            <h1> Associated Events</h1>
+            <ul class="media-grid" data-module="media-grid ">
+	        {% block associated_events_list %}
+                {% for event in c.associated_events %}
+                    {% snippet "event/snippets/events_item.html", event=event, type='associated', position=loop.index %}
+                {% endfor %}
+            {% endblock %}
+            </ul><br><br>
         {% endif %}
-    {% endblock %}
-
     {% block events_search_form %}
         {% set sorting = [ (_('Date Ascending'), 'end asc'),
                            (_('Date Descending'), 'end desc')] %}
@@ -34,6 +33,7 @@
                                             no_bottom_border=true if c.page.items
         %}
     {% endblock %}
+
 
     {% block events_list %}
         {% snippet "event/snippets/events_list.html", events=c.events, related=True %}
