--- a/ckanext/tess/templates/package/snippets/package_basic_fields.html
+++ b/ckanext/tess/templates/package/snippets/package_basic_fields.html
@@ -109,7 +109,7 @@
 
 {% block package_basic_fields_tags %}
   {% set tag_attrs = {'data-module': 'autocomplete', 'data-module-tags': '', 'data-module-source': '/api/2/util/tag/autocomplete?incomplete=?'} %}
-  {{ form.input('tag_string', id='field-tags', label=_('Tags'), placeholder=_('e.g. structural bioinformatics, gene prediction, NGS'), value=data.tag_string, error=errors.tags, classes=['control-full'], attrs=tag_attrs) }}
+  {{ form.input('tag_string', id='field-tags', label=_('Tags'), placeholder=_('e.g. NGS, structural bioinformatics, gene prediction, statistics, linux'), value=data.tag_string, error=errors.tags, classes=['control-full'], attrs=tag_attrs) }}
 {% endblock %}
 
 {% block package_basic_fields_license %}
