--- a/ckanext/tess/templates/workflow/new.html
+++ b/ckanext/tess/templates/workflow/new.html
@@ -1,4 +1,4 @@
-{% import 'macros/form.html' as form %}
+
 {% extends "page.html" %}
 
 {% block subtitle %}{{ _('Workflows') }}{% endblock %}
@@ -15,48 +15,11 @@
 {% endblock %}
 
 {% block primary_content_inner %}
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script type="text/javascript" src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
-<script type="text/javascript" src="http://cytoscape.github.io/cytoscape.js/api/cytoscape.js-latest/cytoscape.js"></script>
-<script type="text/javascript" src="https://rawgit.com/bdparrish/cytoscape.js-toolbar/master/cytoscape-toolbar.js"></script>
-<!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/js/bootstrap.min.js"></script>-->
-<link type="text/css" href="/workflows-cytoscape.css" rel="stylesheet"/>
-<link type="text/css" href="/font-awesome-4.0.3/css/font-awesome.css" rel="stylesheet"/>
-<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
-<!--<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">-->
-{% resource 'tess/workflows-cytoscape-toolbar.js' %}
-
-{% set workflow_create_url = h.url_for('workflow_new') %}
-<form class="form-horizontal" method="post" data-module="basic-form" enctype="multipart/form-data" action="{{workflow_create_url}}">
-
-    <div class="form-actions" style="border-top: 0px; padding-top: 0px;">
-        <button type="button" id="show-wf" >Show workflow!</button>
-        <!--<div id="dialog-div"></div>-->
-          {% block basic_fields %}
-             {{ form.input('title', label=_('Name'), id='field-name', placeholder=_('Workflow name'), classes=['control-full']) }}
-             {{ form.markdown('description', label=_('Description'), id='field-description', placeholder=_('A little information about workflow...'), value=None, error=None) }}
-            {{ form.markdown('dialog-div', label=_('JSON Representation'), id='dialog-div') }}
-        {% endblock %}
-        {% if h.check_access('workflow_create')  %}
-        <div style="padding-bottom: 30px;">&nbsp;
-            <!--<a class="btn btn-primary pull-right" href="{{workflow_create_url}}" name="save"><i class="icon-save"></i> Save workflow</a>-->
-            <button class="btn btn-primary pull-right" name="save" type="submit"><i class="icon-save"></i> Save workflow</button>
-        </div>
-        {% endif %}
-    </div>
-
-
-</form>
-
-<div id="cy" style="float: right;" class="cy col-md-7 col-md-offset-1"></div>
-<script>
-    $(document).ready(function(){
-        drawGraph({},'new');
-    });
-</script>
+    {% snippet "workflow/snippets/display_workflow_info.html", workflow={}, action='new' %}
+    {% snippet "workflow/snippets/display_workflow.html", workflow={}, action='new' %}
 {% endblock %}
 
 {% block secondary_content %}
-{% snippet "workflow/snippets/workflow-property-editor.html" %}
-{% snippet "workflow/snippets/workflow-creation-guide.html" %}
+    {% snippet "workflow/snippets/workflow-property-editor.html" %}
+    {% snippet "workflow/snippets/workflow-creation-guide.html" %}
 {% endblock %}
