--- a/ckanext/tess/templates/package/snippets/package_basic_fields.html
+++ b/ckanext/tess/templates/package/snippets/package_basic_fields.html
@@ -1,5 +1,7 @@
 {% import 'macros/form.html' as form %}
 
+{{data}}
+
 {% block package_basic_fields_title %}
   {{ form.input('title', id='field-title', label=_('Title'), placeholder=_('eg. A descriptive title'), is_required=true, value=data.title, error=errors.title, classes=['control-full'], attrs={'data-module': 'slug-preview-target'}) }}
 {% endblock %}
