--- a/ckanext/tess/templates/workflow/read.html
+++ b/ckanext/tess/templates/workflow/read.html
@@ -16,8 +16,8 @@
 
 {% block content_primary_nav %}
   {{ h.build_nav_icon('workflow_read', _('Workflow'), id=c.workflow_dict.name) }}
-  {{ h.build_nav_icon('workflow_list', _('Materials'), id=c.workflow_dict.name, offset=0) }}
-  {{ h.build_nav_icon('workflow_list', _('Activity Stream'), id=c.workflow_dict.name, offset=0) }}
+  {{ h.build_nav_icon('workflow_materials', _('Training Materials'), id=c.workflow_dict.name, offset=0) }}
+  {{ h.build_nav_icon('workflow_activities', _('Activity Stream'), id=c.workflow_dict.name, offset=0) }}
 {% endblock %}
 
 
