--- a/ckanext/tess/templates/workflow/snippets/display_workflow_info.html
+++ b/ckanext/tess/templates/workflow/snippets/display_workflow_info.html
@@ -25,7 +25,9 @@
             {% endif %}
             {% if action == 'edit' %}
                 {% if h.check_access('workflow_delete', {'id': workflow.id} )  %}
-                    <!--Delete button -->
+                    {% set locale = h.dump_json({'content': _('Are you sure you want to delete this workflow?')}) %}
+                    <a href="{% url_for controller='ckanext.tess.workflow:WorkflowController',
+                     action='delete', id=workflow.id %}" class="btn btn-danger pull-left" data-module="confirm-action" data-module-i18n="{{ locale }}">{{ _('Delete') }}</a>
                 {% endif %}
             {% endif %}
         </div>
