--- a/ckanext/tess/templates/workflow/snippets/workflow-property-editor.html
+++ b/ckanext/tess/templates/workflow/snippets/workflow-property-editor.html
@@ -1,9 +1,17 @@
+
+{% import 'macros/form.html' as form %}
+
 <div class="module module-narrow module-shallow">
     <h2 class="module-heading">
         <i class="icon-edit-sign"></i>
         {{ _('Workflow property editor') }}
     </h2>
     <div style="padding: 0 5px;" class="module-content col-md-4">
-        <div id="workflow_element_info"></div>
+        <div id="workflow_element_info">
+            {{ form.input('title', label=_('Name'), id='element-name', placeholder=_('Stage name')) }}
+            {{ form.input('colour', label=_('Colour'), id='element-colour', placeholder=_('#FE23A9')) }}
+            {{ form.select('topic', label=_('Topic'), options=[{'value':'Topic 1'},{'value':'Topic 2'},{'value':'Topic 3'}], selected='Topic 1', id='element-topic') }}
+            <button class="btn btn-primary pull-right" id="update-editor" type="submit"><i class="icon-save"></i> Save stage</button>
+        </div>
     </div>
 </div>
