Modified buttons when creating/updating dataset.

--- a/ckanext/tess/templates/package/snippets/package_basic_fields.html
+++ b/ckanext/tess/templates/package/snippets/package_basic_fields.html
@@ -130,7 +130,7 @@
         at <a href="http://opendefinition.org/licenses/">opendefinition.org</a>
       {% endtrans %}
     </span>
-      <p style="font-size: 11px; line-height: 1.2; padding-top: 5px;">
+      <p style="font-size: 11px; line-height: 1.2; padding-top: 5px; margin-bottom: 0px;">
           {%- trans -%}
           The <i>data license</i> you select above only applies to the contents
           of any resource files that you add to this training material. By submitting
