--- a/ckanext/tess/templates/package/snippets/resource_form.html
+++ b/ckanext/tess/templates/package/snippets/resource_form.html
@@ -70,7 +70,7 @@
     {% endblock %}
     {% if stage %}
       {% block previous_button %}
-        <button class="btn" name="save" value="go-dataset" type="submit">{{ _('Previous') }}</button>
+        <!--<button class="btn" name="save" value="go-dataset" type="submit">{{ _('Previous') }}</button>-->
       {% endblock %}
       {% block again_button %}
         <button class="btn" name="save" value="again" type="submit">{{ _('Save & add another') }}</button>
